@@ -1,4 +1,8 @@
-﻿shmuel 28.05.2014 12:52:34 +0200 - build 350
+﻿shmuel 28.05.2014 13:00:02 +0200 - build 351
+
+1. LuaFAR: M#2674: Возврат хэндла панели при работе из макроса - поддержка для LuaFAR-плагинов.
+
+shmuel 28.05.2014 12:52:34 +0200 - build 350
 
 1. Плагин падал при начальной загрузке макросов, если на package.cpath
    находилась lpeg.dll версии 0.10 при том, что в %farhome% была версия 0.12.
